--- a/programming/language/python/python-matplotlib/pspec.xml
+++ b/programming/language/python/python-matplotlib/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>A 2D plotting library</Summary>
         <Description>Matplotlib is a python 2D plotting library which produces publication quality figures in a variety of hardcopy formats and interactive environments across platforms. matplotlib can be used in python scripts.</Description>
-        <Archive sha1sum="c7a832f28a66817626e7a8af21e14ea0e15f4008" type="targz">mirrors://sourceforge/matplotlib/matplotlib-1.0.1.tar.gz</Archive>
+        <Archive sha1sum="1d0c319b2bc545f1a7002f56768e5730fe573518" type="targz">https://github.com/downloads/matplotlib/matplotlib/matplotlib-1.2.0.tar.gz</Archive>
         <BuildDependencies>
             <Dependency>python-numpy</Dependency>
             <Dependency>python-gtk-devel</Dependency>
@@ -24,11 +24,9 @@
             <Dependency>python-dateutil</Dependency>
         </BuildDependencies>
         <Patches>
-            <Patch level="1">use-png-accessor-functions.patch</Patch>
             <Patch level="1">setup.patch</Patch>
-            <Patch level="1">0001-Bugfix-propagate-timezone-info-in-plot_date-xaxis_da.patch</Patch>
-            <Patch level="1">matplotlib-1.0.1-plot_directive.patch</Patch>
-            <Patch level="1">matplotlib-1.0.1-tkinter.patch</Patch> 
+            <Patch level="0">setupext-tk-include-0.99.1.2.patch</Patch>
+	    <!--<Patch level="0">setupext-x86_64-libdir-1.1.1.patch</Patch>-->
         </Patches>
     </Source>
 
@@ -51,6 +49,13 @@
     </Package>
 
     <History>
+        <Update release="13">
+            <Date>2012-11-13</Date>
+            <Version>1.2.0</Version>
+            <Comment>version bump</Comment>
+            <Name>Erdinç Gültekin</Name>
+            <Email>erdincgultekin@gmail.com</Email>
+        </Update>
         <Update release="14">
             <Date>2011-01-04</Date>
             <Version>1.0.1</Version>
