--- a/programming/language/python/python-musicbrainz2/pspec.xml
+++ b/programming/language/python/python-musicbrainz2/pspec.xml
@@ -13,7 +13,7 @@
         <IsA>app:console</IsA>
         <Summary>Client library to access to the MusicBrainz Database</Summary>
         <Description>Python-MusicBrainz2 is a library written in python that provides easy object oriented access to the MusicBrainz Database using the XML Web Service.</Description>
-        <Archive sha1sum="f862f2ed39fd0b872adfcaf0f3ac7a1f7846d000" type="targz">http://ftp.musicbrainz.org/pub/musicbrainz/python-musicbrainz2/python-musicbrainz2-0.7.3.tar.gz</Archive>
+        <Archive sha1sum="c59872b473bd1cadff8bacbe258fed0831938c80" type="targz">http://ftp.musicbrainz.org/pub/musicbrainz/python-musicbrainz2/python-musicbrainz2-0.7.4.tar.gz</Archive>
         <BuildDependencies>
             <Dependency>libdiscid-devel</Dependency>
         </BuildDependencies>
@@ -32,6 +32,13 @@
     </Package>
 
     <History>
+        <Update release="1">
+            <Date>2012-11-13</Date>
+            <Version>0.7.4</Version>
+            <Comment>First release</Comment>
+            <Name>Erdinç Gültekin</Name>
+            <Email>erdincgultekin@gmail.com</Email>
+        </Update>
         <Update release="1">
             <Date>2011-02-22</Date>
             <Version>0.7.3</Version>
