--- a/programming/language/python/python-networkx/pspec.xml
+++ b/programming/language/python/python-networkx/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>High productivity software for complex networks</Summary>
         <Description>networkx is a python package for the creation, manipulation, and study of the structure, dynamics and functions of complex networks.</Description>
-        <Archive sha1sum="a195ca0cc4ca94d2e07f91afe3b56641baccd61d" type="targz">http://pypi.python.org/packages/source/n/networkx/networkx-1.4.tar.gz</Archive>
+        <Archive sha1sum="1a83dbbac6fb4abc6bfd644ae3c4a6af8ebb1c33" type="targz">http://pypi.python.org/packages/source/n/networkx/networkx-1.7.tar.gz</Archive>
     </Source>
 
     <Package>
@@ -30,6 +30,13 @@
     </Package>
 
     <History>
+        <Update release="7">
+            <Date>2012-11-13</Date>
+            <Version>1.7</Version>
+            <Comment>bump to New stable release</Comment>
+            <Name>Erdinç Gültekin</Name>
+            <Email>erdincgultekin@gmail.com</Email>
+        </Update>
         <Update release="6">
             <Date>2011-02-04</Date>
             <Version>1.4</Version>
