--- a/programming/language/python/python-nltk/pspec.xml
+++ b/programming/language/python/python-nltk/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>The data for the Natural Language Toolkit for Python</Summary>
         <Description>NLTK -the Natural Language Toolkit— is a suite of open source Python modules, data sets and tutorials supporting research and development in natural language processing.</Description>
-        <Archive sha1sum="a4457066f12f1bd3820c17a19fe2e2d680175c02" type="targz">http://nltk.googlecode.com/files/nltk-2.0b9.tar.gz</Archive>
+        <Archive sha1sum="4cd2b834875db6df2662a86a35f90d1e9bb8c1ce" type="targz">https://nltk.googlecode.com/files/nltk-2.0.1rc1.tar.gz</Archive>
         <BuildDependencies>
             <Dependency>python-PyYAML</Dependency>
         </BuildDependencies>
@@ -30,6 +30,13 @@
    </Package>
 
     <History>
+        <Update release="3">
+            <Date>2012-11-13</Date>
+            <Version>2.0.1_rc1</Version>
+            <Comment>Version bump</Comment>
+            <Name>Erdinç Gültekin</Name>
+            <Email>erdincgultekin@gmail.com</Email>
+        </Update>
         <Update release="2">
             <Date>2010-08-18</Date>
             <Version>2.0_beta9</Version>
