--- a/programming/language/python/python-numexpr/pspec.xml
+++ b/programming/language/python/python-numexpr/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>Fast numerical expression evaluator for NumPy</Summary>
         <Description>python-numexpr package evaluates multiple-operator array expressions many times faster than NumPy can.</Description>
-        <Archive sha1sum="9874be16e404d1d8550c2fd14b61a4520a387153" type="targz">http://numexpr.googlecode.com/files/numexpr-1.4.2.tar.gz</Archive>
+        <Archive sha1sum="71121246f550290d98e23e93a3ebe140c01aea2a" type="targz">https://numexpr.googlecode.com/files/numexpr-2.0.1.tar.gz</Archive>
         <BuildDependencies>
             <Dependency>python-numpy</Dependency>
         </BuildDependencies>
@@ -30,6 +30,13 @@
     </Package>
 
     <History>
+        <Update release="2">
+            <Date>2012-11-14</Date>
+            <Version>2.0.1</Version>
+            <Comment>Version bump.</Comment>
+            <Name>Erdinç Gültekin</Name>
+            <Email>erdincgultekin@gmail.com</Email>
+        </Update>
         <Update release="3">
             <Date>2011-02-01</Date>
             <Version>1.4.2</Version>
