--- a/desktop/kde/l10n/kde-l10n-ca@valencia/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-ca@valencia/pspec.xml
@@ -12,9 +12,9 @@
         <IsA>locale:ca@valencia</IsA>
         <Summary>Catalan Valencian KDE4 internationalization package</Summary>
         <Description>kde-l10n-ca@valencia is the KDE4 internationalization package that provides Catalan Valencian translations for KDE4 applications.</Description>
-        <Archive type="tarxz" sha1sum="5773d06c59a3ad4510989159ef04c78cd8f102ff">mirrors://kde/stable/4.8.4/src/kde-l10n/kde-l10n-ca@valencia-4.8.4.tar.xz</Archive>
+        <Archive type="tarxz" sha1sum="d935ef8d33420ea3b3b488cc696d5ed057b8321b">mirrors://kde/stable/4.9.3/src/kde-l10n/kde-l10n-ca@valencia-4.9.3.tar.xz</Archive>
         <BuildDependencies>
-            <Dependency versionFrom="4.8.4">kdelibs-devel</Dependency>
+            <Dependency versionFrom="4.9.3">kdelibs-devel</Dependency>
         </BuildDependencies>
     </Source>
 
@@ -25,17 +25,14 @@
         </Files>
     </Package>
 
-    <Package>
-        <Name>kde-l10n-ca@valencia-doc</Name>
-        <Summary>Catalan Valencian documentation files for KDE</Summary>
-        <Files>
-            <Path fileType="data">/usr/share/kde4</Path>
-            <Path fileType="man">/usr/share/man</Path>
-            <Path fileType="doc">/usr/share/doc</Path>
-        </Files>
-    </Package>
-
     <History>
+        <Update release="5">
+            <Date>2012-11-13</Date>
+            <Version>4.9.3</Version>
+            <Comment>Version bump to 4.9.3</Comment>
+            <Name>Yusuf Aydemir</Name>
+            <Email>yusuf.aydemir@istanbul.com</Email>
+        </Update>       
         <Update release="4">
             <Date>2008-06-05</Date>
             <Version>4.8.4</Version>
