--- a/desktop/kde/l10n/kde-l10n-de/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-de/pspec.xml
@@ -12,9 +12,9 @@
         <IsA>locale:de</IsA>
         <Summary>German KDE4 internationalization package</Summary>
         <Description>kde-l10n-de is the KDE4 internationalization package that provides German translations for KDE4 applications.</Description>
-        <Archive type="tarxz" sha1sum="034e1d9276eb75735681e2d9ae71edfe7bdf8767">mirrors://kde/stable/4.8.4/src/kde-l10n/kde-l10n-de-4.8.4.tar.xz</Archive>
+        <Archive type="tarxz" sha1sum="1c1cd1b4e4ceaf00aea15e9cbdd7d3b74d2e5710">mirrors://kde/stable/4.9.3/src/kde-l10n/kde-l10n-de-4.9.3.tar.xz</Archive>
         <BuildDependencies>
-            <Dependency versionFrom="4.8.4">kdelibs-devel</Dependency>
+            <Dependency versionFrom="4.9.3">kdelibs-devel</Dependency>
         </BuildDependencies>
     </Source>
 
@@ -36,6 +36,13 @@
     </Package>
 
     <History>
+        <Update release="46">
+            <Date>2012-11-13</Date>
+            <Version>4.9.3</Version>
+            <Comment>Version bump to 4.9.3</Comment>
+            <Name>Yusuf Aydemir</Name>
+            <Email>yusuf.aydemir@istanbul.com</Email>
+        </Update>       
         <Update release="45">
             <Date>2012-06-05</Date>
             <Version>4.8.4</Version>
