--- a/desktop/kde/l10n/kde-l10n-el/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-el/pspec.xml
@@ -12,9 +12,9 @@
         <IsA>locale:el</IsA>
         <Summary>Greek KDE4 internationalization package</Summary>
         <Description>kde-l10n-el is the KDE4 internationalization package that provides Greek translations for KDE4 applications.</Description>
-        <Archive type="tarxz" sha1sum="032ba7e7116cbe2d6d9960787cb3d903d9f60573">mirrors://kde/stable/4.8.4/src/kde-l10n/kde-l10n-el-4.8.4.tar.xz</Archive>
+        <Archive type="tarxz" sha1sum="6554289de874f9f6e45cd025969e490546b1e992">mirrors://kde/stable/4.9.3/src/kde-l10n/kde-l10n-el-4.9.3.tar.xz</Archive>
         <BuildDependencies>
-            <Dependency versionFrom="4.8.4">kdelibs-devel</Dependency>
+            <Dependency versionFrom="4.9.3">kdelibs-devel</Dependency>
         </BuildDependencies>
     </Source>
 
@@ -36,6 +36,13 @@
     </Package>
 
     <History>
+        <Update release="44">
+            <Date>2012-11-13</Date>
+            <Version>4.9.3</Version>
+            <Comment>Version bump to 4.9.3</Comment>
+            <Name>Yusuf Aydemir</Name>
+            <Email>yusuf.aydemir@istanbul.com</Email>
+        </Update>       
         <Update release="43">
             <Date>2012-06-05</Date>
             <Version>4.8.4</Version>
