--- a/desktop/kde/l10n/kde-l10n-en_GB/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-en_GB/pspec.xml
@@ -12,9 +12,9 @@
         <IsA>locale:en_GB</IsA>
         <Summary>British English KDE4 internationalization package</Summary>
         <Description>kde-l10n-en_GB is the KDE4 internationalization package that provides British English translations for KDE4 applications.</Description>
-        <Archive type="tarxz" sha1sum="fc17fb9c322b1de05ef3d1c5b5bbd4b8e2fc0514">mirrors://kde/stable/4.8.4/src/kde-l10n/kde-l10n-en_GB-4.8.4.tar.xz</Archive>
+        <Archive type="tarxz" sha1sum="7e65bb4aaaa99105c3f007ce6e65b45216369662">mirrors://kde/stable/4.9.3/src/kde-l10n/kde-l10n-en_GB-4.9.3.tar.xz</Archive>
         <BuildDependencies>
-            <Dependency versionFrom="4.8.4">kdelibs-devel</Dependency>
+            <Dependency versionFrom="4.9.3">kdelibs-devel</Dependency>
         </BuildDependencies>
     </Source>
 
@@ -36,6 +36,13 @@
     </Package>
 
     <History>
+        <Update release="44">
+            <Date>2012-11-13</Date>
+            <Version>4.9.3</Version>
+            <Comment>Version bump to 4.9.3</Comment>
+            <Name>Yusuf Aydemir</Name>
+            <Email>yusuf.aydemir@istanbul.com</Email>
+        </Update>       
         <Update release="43">
             <Date>2012-06-05</Date>
             <Version>4.8.4</Version>
