--- a/desktop/kde/l10n/kde-l10n-es/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-es/pspec.xml
@@ -12,9 +12,9 @@
         <IsA>locale:es</IsA>
         <Summary>Spanish KDE4 internationalization package</Summary>
         <Description>kde-l10n-es is the KDE4 internationalization package that provides Spanish translations for KDE4 applications.</Description>
-        <Archive type="tarxz" sha1sum="03c15aa3ba5e2f658a3fb19278cbcd97661fa427">mirrors://kde/stable/4.8.4/src/kde-l10n/kde-l10n-es-4.8.4.tar.xz</Archive>
+        <Archive type="tarxz" sha1sum="cc36b48a8fe1e81b3408712d5f9893cbc132b8e1">mirrors://kde/stable/4.9.3/src/kde-l10n/kde-l10n-es-4.9.3.tar.xz</Archive>
         <BuildDependencies>
-            <Dependency versionFrom="4.8.4">kdelibs-devel</Dependency>
+            <Dependency versionFrom="4.9.3">kdelibs-devel</Dependency>
         </BuildDependencies>
     </Source>
 
@@ -36,6 +36,13 @@
     </Package>
 
     <History>
+        <Update release="46">
+            <Date>2012-11-13</Date>
+            <Version>4.9.3</Version>
+            <Comment>Version bump to 4.9.3</Comment>
+            <Name>Yusuf Aydemir</Name>
+            <Email>yusuf.aydemir@istanbul.com</Email>
+        </Update>       
         <Update release="45">
             <Date>2012-06-05</Date>
             <Version>4.8.4</Version>
