--- a/desktop/kde/l10n/kde-l10n-et/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-et/pspec.xml
@@ -12,9 +12,9 @@
         <IsA>locale:et</IsA>
         <Summary>Estonian KDE4 internationalization package</Summary>
         <Description>kde-l10n-et is the KDE4 internationalization package that provides Estonian translations for KDE4 applications.</Description>
-        <Archive type="tarxz" sha1sum="1caabd75c65648bcc6e4b1e1663df5223bec55da">mirrors://kde/stable/4.8.4/src/kde-l10n/kde-l10n-et-4.8.4.tar.xz</Archive>
+        <Archive type="tarxz" sha1sum="1d21343b01a02fccc031a49b81c911b60d82724a">mirrors://kde/stable/4.9.3/src/kde-l10n/kde-l10n-et-4.9.3.tar.xz</Archive>
         <BuildDependencies>
-            <Dependency versionFrom="4.8.4">kdelibs-devel</Dependency>
+            <Dependency versionFrom="4.9.3">kdelibs-devel</Dependency>
         </BuildDependencies>
     </Source>
 
@@ -36,6 +36,13 @@
     </Package>
 
     <History>
+        <Update release="44">
+            <Date>2012-11-12</Date>
+            <Version>4.9.3</Version>
+            <Comment>Version bump to 4.9.3</Comment>
+            <Name>Yusuf Aydemir</Name>
+            <Email>yusuf.aydemir@istanbul.com</Email>
+        </Update>       
         <Update release="43">
             <Date>2012-06-05</Date>
             <Version>4.8.4</Version>
