--- a/desktop/kde/l10n/kde-l10n-eu/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-eu/pspec.xml
@@ -12,9 +12,9 @@
         <IsA>locale:eu</IsA>
         <Summary>Basque KDE4 internationalization package</Summary>
         <Description>kde-l10n-eu is the KDE4 internationalization package that provides Basque translations for KDE4 applications.</Description>
-        <Archive type="tarxz" sha1sum="39aadc887d35111b6592da68f16431c1275438f1">mirrors://kde/stable/4.8.4/src/kde-l10n/kde-l10n-eu-4.8.4.tar.xz</Archive>
+        <Archive type="tarxz" sha1sum="3829980c3cd099ca2e6b38fad9fd1208ba541c35">mirrors://kde/stable/4.9.3/src/kde-l10n/kde-l10n-eu-4.9.3.tar.xz</Archive>
         <BuildDependencies>
-            <Dependency versionFrom="4.8.4">kdelibs-devel</Dependency>
+            <Dependency versionFrom="4.9.3">kdelibs-devel</Dependency>
         </BuildDependencies>
     </Source>
 
@@ -36,6 +36,13 @@
     </Package>
 
     <History>
+        <Update release="31">
+            <Date>2012-11-13</Date>
+            <Version>4.9.3</Version>
+            <Comment>Version bump to 4.9.3</Comment>
+            <Name>Yusuf Aydemir</Name>
+            <Email>yusuf.aydemir@istanbul.com</Email>
+        </Update>       
         <Update release="30">
             <Date>2012-06-05</Date>
             <Version>4.8.4</Version>
