--- a/desktop/kde/l10n/kde-l10n-fi/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-fi/pspec.xml
@@ -12,9 +12,9 @@
         <IsA>locale:fi</IsA>
         <Summary>Finnish KDE4 internationalization package</Summary>
         <Description>kde-l10n-fi is the KDE4 internationalization package that provides Finnish translations for KDE4 applications.</Description>
-        <Archive type="tarxz" sha1sum="4204172bb6bf1b4f0a662c5f547eaa429c0b59bc">mirrors://kde/stable/4.8.4/src/kde-l10n/kde-l10n-fi-4.8.4.tar.xz</Archive>
+        <Archive type="tarxz" sha1sum="72b0dd1aa1d6e8c7869c25bca1d29f1af901fb73">mirrors://kde/stable/4.9.3/src/kde-l10n/kde-l10n-fi-4.9.3.tar.xz</Archive>
         <BuildDependencies>
-            <Dependency versionFrom="4.8.4">kdelibs-devel</Dependency>
+            <Dependency versionFrom="4.9.3">kdelibs-devel</Dependency>
         </BuildDependencies>
     </Source>
 
@@ -36,6 +36,13 @@
     </Package>
 
     <History>
+        <Update release="44">
+            <Date>2012-11-13</Date>
+            <Version>4.9.3</Version>
+            <Comment>Version bump to 4.9.3</Comment>
+            <Name>Yusuf Aydemir</Name>
+            <Email>yusuf.aydemir@istanbul.com</Email>
+        </Update>       
         <Update release="43">
             <Date>2012-06-05</Date>
             <Version>4.8.4</Version>
