--- a/desktop/kde/l10n/kde-l10n-fr/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-fr/pspec.xml
@@ -12,9 +12,9 @@
         <IsA>locale:fr</IsA>
         <Summary>French KDE4 internationalization package</Summary>
         <Description>kde-l10n-fr is the KDE4 internationalization package that provides French translations for KDE4 applications.</Description>
-        <Archive type="tarxz" sha1sum="37a1f532890875b04a3168a50c41e3734d6721a6">mirrors://kde/stable/4.8.4/src/kde-l10n/kde-l10n-fr-4.8.4.tar.xz</Archive>
+        <Archive type="tarxz" sha1sum="c2a954905fd404ed662df9f8a587c645479b2d7c">mirrors://kde/stable/4.9.3/src/kde-l10n/kde-l10n-fr-4.9.3.tar.xz</Archive>
         <BuildDependencies>
-            <Dependency versionFrom="4.8.4">kdelibs-devel</Dependency>
+            <Dependency versionFrom="4.9.3">kdelibs-devel</Dependency>
         </BuildDependencies>
     </Source>
 
@@ -36,6 +36,13 @@
     </Package>
 
     <History>
+        <Update release="45">
+            <Date>2012-11-13</Date>
+            <Version>4.9.3</Version>
+            <Comment>Version bump to 4.9.3</Comment>
+            <Name>Yusuf Aydemir</Name>
+            <Email>yusuf.aydemir@istanbul.com</Email>
+        </Update>       
         <Update release="44">
             <Date>2012-06-05</Date>
             <Version>4.8.4</Version>
