--- a/desktop/kde/l10n/kde-l10n-ga/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-ga/pspec.xml
@@ -12,9 +12,9 @@
         <IsA>locale:ga</IsA>
         <Summary>Irish Gaelic KDE4 internationalization package</Summary>
         <Description>kde-l10n-ga is the KDE4 internationalization package that provides Irish Gaelic translations for KDE4 applications.</Description>
-        <Archive type="tarxz" sha1sum="21323136a8f7c09860a3a763e59e5eb2fae63359">mirrors://kde/stable/4.8.4/src/kde-l10n/kde-l10n-ga-4.8.4.tar.xz</Archive>
+        <Archive type="tarxz" sha1sum="c7e31de6f0fa7b663e567363c5f9ecf680a38b95">mirrors://kde/stable/4.9.3/src/kde-l10n/kde-l10n-ga-4.9.3.tar.xz</Archive>
         <BuildDependencies>
-            <Dependency versionFrom="4.8.4">kdelibs-devel</Dependency>
+            <Dependency versionFrom="4.9.3">kdelibs-devel</Dependency>
         </BuildDependencies>
     </Source>
 
@@ -36,6 +36,13 @@
     </Package>
 
     <History>
+        <Update release="44">
+            <Date>2012-11-13</Date>
+            <Version>4.9.3</Version>
+            <Comment>Version bump to 4.9.3</Comment>
+            <Name>Yusuf Aydemir</Name>
+            <Email>yusuf.aydemir@istanbul.com</Email>
+        </Update>       
         <Update release="43">
             <Date>2012-06-05</Date>
             <Version>4.8.4</Version>
