--- a/desktop/kde/l10n/kde-l10n-gl/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-gl/pspec.xml
@@ -12,9 +12,9 @@
         <IsA>locale:gl</IsA>
         <Summary>Galician KDE4 internationalization package</Summary>
         <Description>kde-l10n-gl is the KDE4 internationalization package that provides Galician translations for KDE4 applications.</Description>
-        <Archive type="tarxz" sha1sum="515b17d196e5869ca5aa35de89b314e438335985">mirrors://kde/stable/4.8.4/src/kde-l10n/kde-l10n-gl-4.8.4.tar.xz</Archive>
+        <Archive type="tarxz" sha1sum="5644962fcd82f8c147249507339494a697f5f695">mirrors://kde/stable/4.9.3/src/kde-l10n/kde-l10n-gl-4.9.3.tar.xz</Archive>
         <BuildDependencies>
-            <Dependency versionFrom="4.8.4">kdelibs-devel</Dependency>
+            <Dependency versionFrom="4.9.3">kdelibs-devel</Dependency>
         </BuildDependencies>
     </Source>
 
@@ -36,6 +36,13 @@
     </Package>
 
     <History>
+        <Update release="44">
+            <Date>2012-11-13</Date>
+            <Version>4.9.3</Version>
+            <Comment>Version bump to 4.9.3</Comment>
+            <Name>Yusuf Aydemir</Name>
+            <Email>yusuf.aydemir@istanbul.com</Email>
+        </Update>       
         <Update release="43">
             <Date>2012-06-05</Date>
             <Version>4.8.4</Version>
