--- a/desktop/kde/l10n/kde-l10n-he/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-he/pspec.xml
@@ -12,9 +12,9 @@
         <IsA>locale:he</IsA>
         <Summary>Hebrew KDE4 internationalization package</Summary>
         <Description>kde-l10n-he is the KDE4 internationalization package that provides Hebrew translations for KDE4 applications.</Description>
-        <Archive type="tarxz" sha1sum="2c58d2a5da035adb0a1f8c13deab61729c2e800b">mirrors://kde/stable/4.8.4/src/kde-l10n/kde-l10n-he-4.8.4.tar.xz</Archive>
+        <Archive type="tarxz" sha1sum="881d75f58b1361b605c91efcc9658046339d9d4b">mirrors://kde/stable/4.9.3/src/kde-l10n/kde-l10n-he-4.9.3.tar.xz</Archive>
         <BuildDependencies>
-            <Dependency versionFrom="4.8.4">kdelibs-devel</Dependency>
+            <Dependency versionFrom="4.9.3">kdelibs-devel</Dependency>
         </BuildDependencies>
     </Source>
 
@@ -36,6 +36,13 @@
     </Package>
 
     <History>
+        <Update release="31">
+            <Date>2012-11-13</Date>
+            <Version>4.9.3</Version>
+            <Comment>Version bump to 4.9.3</Comment>
+            <Name>Yusuf Aydemir</Name>
+            <Email>yusuf.aydemir@istanbul.com</Email>
+        </Update>       
         <Update release="30">
             <Date>2012-06-05</Date>
             <Version>4.8.4</Version>
