--- a/desktop/kde/l10n/kde-l10n-hi/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-hi/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:hi</IsA>
         <Summary>Hindi KDE4 internationalization package</Summary>
         <Description>kde-l10n-hi is the KDE4 internationalization package that provides Hindi translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="30af5e295ffd2f9b9e6c8665e24f0b11cae41b73">mirrors://kde/stable/4.6.5/src/kde-l10n/kde-l10n-hi-4.6.5.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="f7b3a270b1ec192e527a58c9b3400f795372ef23">mirrors://kde/stable/4.9.3/src/kde-l10n/kde-l10n-hi-4.9.3.tar.xz</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="36">
+            <Date>2012-11-13</Date>
+            <Version>4.9.3</Version>
+            <Comment>Version bump to 4.9.3</Comment>
+            <Name>Yusuf Aydemir</Name>
+            <Email>yusuf.aydemir@istanbul.com</Email>
+        </Update>       
         <Update release="35">
             <Date>2011-07-11</Date>
             <Version>4.6.5</Version>
