--- a/programming/language/python/python-pastedeploy/pspec.xml
+++ b/programming/language/python/python-pastedeploy/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>Load, configure, and compose WSGI applications and servers</Summary>
         <Description>python-pastedeploy is a system for finding and configuring WSGI applications and servers. For WSGI application consumers it provides a single, simple function (loadapp) for loading a WSGI application from a configuration file or a Python Egg. For WSGI application providers it only asks for a single, simple entry point to your application, so that application users don't need to be exposed to the implementation details of your application.</Description>
-        <Archive sha1sum="dcb3d4cff75ccb284fb8c738f0abe27600ed8546" type="targz">http://pypi.python.org/packages/source/P/PasteDeploy/PasteDeploy-1.3.3.tar.gz</Archive>
+        <Archive sha1sum="4bae6b28b5243af0e4c0f40b7f20037d1a0ae846" type="targz">http://pypi.python.org/packages/source/P/PasteDeploy/PasteDeploy-1.5.0.tar.gz</Archive>
     </Source>
 
     <Package>
@@ -26,6 +26,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="4">
+            <Date>2012-11-15</Date>
+            <Version>1.5.0</Version>
+            <Comment>version bump</Comment>
+            <Name>Erdinç Gültekin</Name>
+            <Email>erdincgultekin@gmail.com</Email>
+        </Update>
         <Update release="3">
             <Date>2010-10-13</Date>
             <Version>1.3.3</Version>
