--- a/programming/language/python/python-peak-rules/pspec.xml
+++ b/programming/language/python/python-peak-rules/pspec.xml
@@ -13,7 +13,7 @@
         <IsA>library</IsA>
         <Summary>A highly-extensible framework for creating and using generic functions</Summary>
         <Description>python-peak-rules is a highly-extensible framework for creating and using generic functions, from the very simple to the very complex.Out of the box, it supports multiple-dispatch on positional arguments using tuples of types, full predicate dispatch using strings containing Python expressions, and CLOS-like method combining.</Description>
-        <Archive sha1sum="515558581fc19451f63964f645f2aec789067329" type="targz">http://peak.telecommunity.com/snapshots/PEAK-Rules-0.5a1.dev-r2686.tar.gz</Archive>
+        <Archive sha1sum="09acac8fbd5b6a842f252ea40a0f21af8216a792" type="targz">http://peak.telecommunity.com/snapshots/PEAK-Rules-0.5a1.dev-r2713.tar.gz</Archive>
     </Source>
 
     <Package>
@@ -31,6 +31,13 @@
     </Package>
 
     <History>
+        <Update release="4">
+            <Date>2012-11-15</Date>
+            <Version>0.5_alpha1</Version>
+            <Comment>Version bump to snapshot r2713</Comment>
+            <Name>Erdinç Gültekin</Name>
+            <Email>erdincgultekin@gmail.com</Email>
+        </Update>
         <Update release="3">
             <Date>2010-12-08</Date>
             <Version>0.5_alpha1</Version>
