--- a/programming/language/python/python-pep8/pspec.xml
+++ b/programming/language/python/python-pep8/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>app:console</IsA>
         <Summary>Python style guide checker</Summary>
         <Description>pep8 is a tool to check your Python code against some of the style conventions in PEP 8.</Description>
-        <Archive sha1sum="206c9942ed79a527db1389052ac9dc272183e85d" type="targz">http://pypi.python.org/packages/source/p/pep8/pep8-0.6.1.tar.gz</Archive>
+        <Archive sha1sum="7791690bbbc64ccd797b039eb9aac0fb557bb3cc" type="targz">http://pypi.python.org/packages/source/p/pep8/pep8-1.3.3.tar.gz</Archive>
     </Source>
 
     <Package>
@@ -28,6 +28,13 @@
     </Package>
 
     <History>
+        <Update release="3">
+            <Date>2012-11-15</Date>
+            <Version>1.3.3</Version>
+            <Comment>Version bump.</Comment>
+            <Name>Erdinç Gültekin</Name>
+            <Email>erdincgultekin@gmail.com</Email>
+        </Update>
         <Update release="2">
             <Date>2010-11-22</Date>
             <Version>0.6.1</Version>
