--- a/programming/language/vala/pspec.xml
+++ b/programming/language/vala/pspec.xml
@@ -12,7 +12,7 @@
         <License>BSD</License>
         <Summary>A modern programming language for GNOME</Summary>
         <Description>Vala is a new programming language that aims to bring modern programming language features to GNOME developers without imposing any additional runtime requirements and without using a different ABI compared to applications and libraries written in C.</Description>
-        <Archive sha1sum="1ea1e46064992eaf34be81c06ef1fa8394e32c75" type="tarxz">http://download.gnome.org/sources/vala/0.18/vala-0.18.0.tar.xz</Archive>
+        <Archive sha1sum="c6d24efb9a093b7b67b876b484c612a5af90b9bb" type="tarxz">mirrors://gnome/vala/0.18/vala-0.18.1.tar.xz</Archive>
     </Source>
 
     <Package>
@@ -60,6 +60,13 @@
     </Package>
 
     <History>
+        <Update release="7">
+            <Date>2012-11-15</Date>
+            <Version>0.18.1</Version>
+            <Comment>Version bump.</Comment>
+            <Name>Marcin Bojara</Name>
+            <Email>marcin.bojara@gmail.com</Email>
+        </Update>
         <Update release="6">
             <Date>2012-10-17</Date>
             <Version>0.18.0</Version>
