--- a/programming/language/dotnet/mono-tools/pspec.xml
+++ b/programming/language/dotnet/mono-tools/pspec.xml
@@ -15,7 +15,7 @@
         <IsA>library</IsA>
         <Summary>Useful tools to use for Mono development</Summary>
         <Description>Mono-tools includes useful tools (like monodoc, minvoke, guicompare) for creating extensible applications, and for creating libraries which extend those applications.</Description>
-        <Archive sha1sum="111dccd490fedd42618cb712c66a1d92261e9920" type="tarbz2">http://ftp.novell.com/pub/mono/sources/mono-tools/mono-tools-2.10.tar.bz2</Archive>
+        <Archive sha1sum="111dccd490fedd42618cb712c66a1d92261e9920" type="tarbz2">http://download.mono-project.com/sources/mono-tools/mono-tools-2.10.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>mono-devel</Dependency>
             <Dependency>webkit-sharp</Dependency>
