--- a/programming/language/perl/perl-HTTP-Message/pspec.xml
+++ b/programming/language/perl/perl-HTTP-Message/pspec.xml
@@ -16,6 +16,8 @@
         <BuildDependencies>
             <Dependency version="5.16.1">perl</Dependency>
             <Dependency>perl-LWP-Mediatypes</Dependency>
+	    <Dependency>perl-HTTP-Date</Dependency>
+	    <Dependency>perl-HTML-Parser</Dependency>
         </BuildDependencies>
     </Source>
     <Package>
@@ -23,6 +25,8 @@
         <RuntimeDependencies>
             <Dependency version="5.16.1">perl</Dependency>
             <Dependency>perl-LWP-Mediatypes</Dependency>
+	    <Dependency>perl-HTTP-Date</Dependency>
+	    <Dependency>perl-HTML-Parser</Dependency>
         </RuntimeDependencies>
         <Files>
             <Path fileType="library">/usr/lib</Path>
@@ -31,7 +35,15 @@
             <Path fileType="data">/usr/share</Path>
         </Files>
     </Package>
+
     <History>
+        <Update release="3">
+            <Date>2012-11-16</Date>
+            <Version>6.03</Version>
+            <Comment>Dep add</Comment>
+            <Name>Osman Erkan</Name>
+            <Email>osman.erkan@yandex.com</Email>
+        </Update>
         <Update release="2">
             <Date>2012-09-07</Date>
             <Version>6.03</Version>
