--- a/programming/language/perl/perl-HTTP-Negotiate/pspec.xml
+++ b/programming/language/perl/perl-HTTP-Negotiate/pspec.xml
@@ -15,12 +15,16 @@
         <Archive sha1sum="4a4974639d9b64f7132cb075f551f7293f788c62" type="targz">http://search.cpan.org/CPAN/authors/id/G/GA/GAAS/HTTP-Negotiate-6.01.tar.gz</Archive>
         <BuildDependencies>
             <Dependency version="5.16.1">perl</Dependency>
+	    <Dependency>perl-HTTP-Date</Dependency>
+	    <Dependency>perl-HTTP-Message</Dependency>
         </BuildDependencies>
     </Source>
     <Package>
         <Name>perl-HTTP-Negotiate</Name>
         <RuntimeDependencies>
             <Dependency version="5.16.1">perl</Dependency>
+	    <Dependency>perl-HTTP-Date</Dependency>
+	    <Dependency>perl-HTTP-Message</Dependency>
         </RuntimeDependencies>
         <Files>
             <Path fileType="library">/usr/lib</Path>
