--- a/programming/language/perl/perl-HTTP-Negotiate/pspec.xml
+++ b/programming/language/perl/perl-HTTP-Negotiate/pspec.xml
@@ -33,7 +33,15 @@
             <Path fileType="data">/usr/share</Path>
         </Files>
     </Package>
-     <History>
+
+    <History>
+        <Update release="3">
+            <Date>2012-11-16</Date>
+            <Version>6.01</Version>
+            <Comment>Dep add</Comment>
+            <Name>Osman Erkan</Name>
+            <Email>osman.erkan@yandex.com</Email>
+        </Update>
         <Update release="2">
             <Date>2012-09-06</Date>
             <Version>6.01</Version>
