--- a/programming/language/python/python-pkcs11/pspec.xml
+++ b/programming/language/python/python-pkcs11/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>PKCS#11 wrapper for Python</Summary>
         <Description>python-pkcs11 is a complete PKCS#11 wrapper for Python, created using the SWIG compiler.</Description>
-        <Archive sha1sum="4bcb626504d1e1c19d9eb75194df723a82d96ccc" type="targz">mirrors://sourceforge/pkcs11wrap/pykcs11/pykcs11-1.2.3/PyKCS11-1.2.3.tar.gz</Archive>
+        <Archive sha1sum="3b7f64642c78e239653f0486cb7df2524d2ff726" type="targz">mirrors://sourceforge/pkcs11wrap/pykcs11/pykcs11-1.2.3/PyKCS11-1.2.4.tar.gz</Archive>
     </Source>
 
     <Package>
@@ -24,6 +24,13 @@
     </Package>
 
     <History>
+        <Update release="1">
+            <Date>2012-11-16</Date>
+            <Version>1.2.4</Version>
+            <Comment>version bump</Comment>
+            <Name>Erdinç Gültekin</Name>
+            <Email>erdincgultekin@gmail.com</Email>
+        </Update>
         <Update release="1">
             <Date>2011-07-05</Date>
             <Version>1.2.3</Version>
