--- a/programming/language/python/python-pmw/pspec.xml
+++ b/programming/language/python/python-pmw/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>A toolkit for building high-level compound widgets in Python using the Tkinter module</Summary>
         <Description>python-pmw is a toolkit for building high-level compound widgets in Python using the Tkinter module.</Description>
-        <Archive sha1sum="e2d8dd6eed7378acf8723c860107a12d7e808227" type="targz">mirrors://sourceforge/pmw/Pmw.1.3.2.tar.gz</Archive>
+        <Archive sha1sum="88cd160c32617a2da1b06d567710336156ac0a71" type="targz">mirrors://sourceforge/pmw/Pmw.2.0.0.tar.gz</Archive>
         <BuildDependencies>
             <Dependency>python-tk</Dependency>
         </BuildDependencies>
@@ -30,6 +30,13 @@
     </Package>
 
     <History>
+        <Update release="4">
+            <Date>2012-11-16</Date>
+            <Version>2.0.0</Version>
+            <Comment>version bump</Comment>
+            <Name>Erdinç Gültekin</Name>
+            <Email>erdincgultekin@gmail.com</Email>
+        </Update>
         <Update release="3">
             <Date>2010-08-16</Date>
             <Version>1.3.2</Version>
