--- a/programming/language/python/python-pp/pspec.xml
+++ b/programming/language/python/python-pp/pspec.xml
@@ -13,7 +13,7 @@
         <IsA>app:console</IsA>
         <Summary>Parallel Python</Summary>
         <Description>python-pp is a python module which provides mechanism for parallel execution of python code on SMP and clusters.</Description>
-        <Archive sha1sum="2d44fc5e7b8ceb08a4a0c84443014a9bf352ce05" type="tarbz2">http://www.parallelpython.com/downloads/pp/pp-1.6.1.tar.bz2</Archive>
+        <Archive sha1sum="b63b14b1e4b0eea00923cb62fb783ca1fad2dde1" type="tarbz2">http://www.parallelpython.com/downloads/pp/pp-1.6.2.tar.bz2</Archive>
     </Source>
 
     <Package>
@@ -27,6 +27,13 @@
     </Package>
 
     <History>
+        <Update release="4">
+            <Date>2012-11-16</Date>
+            <Version>1.6.2</Version>
+            <Comment>Version bump</Comment>
+            <Name>Erdinç Gültekin</Name>
+            <Email>erdincgultekin@gmail.com</Email>
+        </Update>
         <Update release="3">
             <Date>2011-03-14</Date>
             <Version>1.6.1</Version>
