--- a/programming/language/python/python-Pygments/pspec.xml
+++ b/programming/language/python/python-Pygments/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>A syntax highlighting package written in Python</Summary>
         <Description>python-Pygments is a generic syntax highlighter for general use in all kinds of software such as forum systems, wikis or other applications that need to prettify source code.</Description>
-        <Archive sha1sum="d34f96421a86004aa5d26ecf975edefd09f948b1" type="targz">http://pypi.python.org/packages/source/P/Pygments/Pygments-1.4.tar.gz</Archive>
+        <Archive sha1sum="4fbd937fd5cebc79fa4b26d4cce0868c4eec5ec5" type="targz">http://pypi.python.org/packages/source/P/Pygments/Pygments-1.5.tar.gz</Archive>
     </Source>
 
     <Package>
@@ -36,6 +36,13 @@
     </Package>
 
     <History>
+        <Update release="9">
+            <Date>2012-11-16</Date>
+            <Version>1.5</Version>
+            <Comment>bump</Comment>
+            <Name>Erdinç Gültekin</Name>
+            <Email>erdincgultekin@gmail.com</Email>
+        </Update>
         <Update release="8">
             <Date>2011-01-07</Date>
             <Version>1.4</Version>
