--- a/programming/language/python/python-psutil/pspec.xml
+++ b/programming/language/python/python-psutil/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>A cross-platform process utilities module for Python</Summary>
         <Description>python-psutil is a module providing an interface for retrieving information on all running processes and system utilization (CPU, memory) in a portable way by using Python, implementing many functionalities offered by command line tools like ps, top, kill, lsof and netstat.</Description>
-        <Archive sha1sum="60a474a7f4a3f799010fa47884d469467bc01ccc" type="targz">http://psutil.googlecode.com/files/psutil-0.3.0.tar.gz</Archive>
+        <Archive sha1sum="f7a76e201601d8e06a1fdf434422f884888aac86" type="targz">http://psutil.googlecode.com/files/psutil-0.6.1.tar.gz</Archive>
     </Source>
 
     <Package>
@@ -24,6 +24,13 @@
     </Package>
 
     <History>
+        <Update release="1">
+            <Date>2012-11-16</Date>
+            <Version>0.6.1</Version>
+            <Comment>version bump</Comment>
+            <Name>Erdinç Gültekin</Name>
+            <Email>erdincgultekin@gmail.com</Email>
+        </Update>
         <Update release="2">
             <Date>2011-07-12</Date>
             <Version>0.3.0</Version>
