--- a/programming/language/python/python-psycopg/pspec.xml
+++ b/programming/language/python/python-psycopg/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>PostgreSQL adapter for Python</Summary>
         <Description>Python-psycopg is a PostgreSQL database adapter for the Python programming language. It supports the full Python DBAPI-2.0 and is thread safe at level 2.</Description>
-        <Archive sha1sum="af7e44c0615037e488031e0d6b9d3b46853b409e" type="targz">http://initd.org/psycopg/tarballs/PSYCOPG-2-4/psycopg2-2.4.2.tar.gz</Archive>
+        <Archive sha1sum="848b2130d948376e1b962faf72f3a2c93dfb5599" type="targz">http://initd.org/psycopg/tarballs/PSYCOPG-2-4/psycopg2-2.4.5.tar.gz</Archive>
         <BuildDependencies>
             <Dependency>postgresql-lib</Dependency>
         </BuildDependencies>
@@ -32,6 +32,13 @@
     </Package>
 
     <History>
+        <Update release="3">
+            <Date>2012-11-16</Date>
+            <Version>2.4.5</Version>
+            <Comment>version bump</Comment>
+            <Name>Erdinç Gültekin</Name>
+            <Email>erdincgultekin@gmail.com</Email>
+        </Update>
         <Update release="2">
             <Date>2011-08-09</Date>
             <Version>2.4.2</Version>
