--- a/programming/language/python/python-pyactiveresource/pspec.xml
+++ b/programming/language/python/python-pyactiveresource/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>Active Resource library for Python</Summary>
         <Description>It provides connection and interaction with a REST server and its objects.</Description>
-        <Archive sha1sum="d1d8c0614fe7dfa5b0e0b31a1d68f3f7b459de91" type="tarbz2">http://cekirdek.pardus.org.tr/~gokmen/files/pyactiveresource-1.0.1.tar.bz2</Archive>
+        <Archive sha1sum="650a0aee378bc0f74ea4df728c4cab08ad54ce10" type="targz">https://github.com/downloads/pardus-anka/2013/pyactiveresource-20121116-101.tar.gz</Archive>
     </Source>
 
     <Package>
@@ -24,6 +24,13 @@
     </Package>
 
     <History>
+        <Update release="2">
+            <Date>2012-11-16</Date>
+            <Version>20121116_101</Version>
+            <Comment>version bump to svn snapshot revision 101</Comment>
+            <Name>Erdinç Gültekin</Name>
+            <Email>erdincgultekin@gmail.com</Email>
+        </Update>
         <Update release="1">
             <Date>2010-08-19</Date>
             <Version>1.0.1</Version>
