--- a/programming/language/python/python-pyalsaaudio/pspec.xml
+++ b/programming/language/python/python-pyalsaaudio/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>Python ALSA module</Summary>
         <Description>A Python wrapper for the ALSA API.</Description>
-        <Archive sha1sum="27138ceb6ed7f86d21c5ecdaf74fc26e5a622cf5" type="targz">mirrors://sourceforge/pyalsaaudio/pyalsaaudio-0.6.tar.gz</Archive>
+        <Archive sha1sum="6582418389782cad53be0779612fb6799a86fcd5" type="targz">mirrors://sourceforge/pyalsaaudio/pyalsaaudio-0.7.tar.gz</Archive>
         <BuildDependencies>
             <Dependency>alsa-lib-devel</Dependency>
             <Dependency>python-sphinx</Dependency>
@@ -31,6 +31,13 @@
     </Package>
 
     <History>
+        <Update release="5">
+            <Date>2012-11-16</Date>
+            <Version>0.7</Version>
+            <Comment>version bump</Comment>
+            <Name>Erdinç Gültekin</Name>
+            <Email>erdincgultekin@gmail.com</Email>
+        </Update>
         <Update release="5">
             <Date>2010-10-13</Date>
             <Version>0.6</Version>
