--- a/programming/language/python/python-pybugz/pspec.xml
+++ b/programming/language/python/python-pybugz/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>app:console</IsA>
         <Summary>A python and command line interface to Bugzilla</Summary>
         <Description>PyBugz is a python and command line interface to Bugzilla. Developers alike can easily extract attachments and close bugs all from the comfort of the command line.</Description>
-        <Archive sha1sum="3a29e1f8c7842b6aaac25f4f61df10c65c90c276" type="targz">http://cekirdek.pardus.org.tr/~mehmet/files/williamh-pybugz-0.9.2-6-gb8390ee.tar.gz</Archive>
+        <Archive sha1sum="c320ca93331089112accd652c292218f3c756616" type="targz">https://github.com/downloads/pardus-anka/2013/pybugz-0.9.2_20121116.tar.gz</Archive>
     </Source>
 
     <Package>
@@ -25,6 +25,13 @@
     </Package>
 
     <History>
+        <Update release="2">
+            <Date>2012-11-16</Date>
+            <Version>0.9.2_20121116</Version>
+            <Comment>version bump</Comment>
+            <Name>Erdinç Gültekin</Name>
+            <Email>erdincgultekin@gmail.com</Email>
+        </Update>
         <Update release="1">
             <Date>2011-06-02</Date>
             <Version>0.9.2</Version>
