--- a/programming/language/python/python-PyOpenGL/pspec.xml
+++ b/programming/language/python/python-PyOpenGL/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>Python bindings to OpenGL</Summary>
         <Description>PyOpenGL is a cross platform Python binding to OpenGL and related APIs.</Description>
-        <Archive sha1sum="35ca03f4c9fb452dc07788818fd1683e37f521bf" type="targz">mirrors://sourceforge/pyopengl/PyOpenGL-3.0.1.tar.gz</Archive>
+        <Archive sha1sum="3c5012ddb5de76a9e4b7253f1b8af2b417eed861" type="targz">http://pypi.python.org/packages/source/P/PyOpenGL/PyOpenGL-3.0.2.tar.gz</Archive>
     </Source>
 
     <Package>
@@ -29,6 +29,20 @@
    </Package>
 
    <History>
+        <Update release="12">
+            <Date>2012-11-16</Date>
+            <Version>3.0.2</Version>
+            <Comment>version bump, support new release:
+               * OpenGL v1.1 through 4.3
+               * GLU
+               * GLUT v3.7
+               * FreeGLUT
+               * GLE 3
+               * hundreds of OpenGL extensions
+            </Comment>
+            <Name>Erdinç Gültekin</Name>
+            <Email>erdincgultekin@gmail.com</Email>
+        </Update>
         <Update release="11">
             <Date>2011-09-27</Date>
             <Version>3.0.1</Version>
