--- a/programming/language/python/python-pyRXP/pspec.xml
+++ b/programming/language/python/python-pyRXP/pspec.xml
@@ -3,7 +3,7 @@
 <PISI>
     <Source>
         <Name>python-pyRXP</Name>
-        <Homepage>http://reportlab.org/pyrxp.html</Homepage>
+        <Homepage>http://www.reportlab.com</Homepage>
         <Packager>
             <Name>Pardus ANKA Admins</Name>
             <Email>pisiciftligi@pardus-linux.org</Email>
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>A very fast validating parser for Python</Summary>
         <Description>pyRXP is a wrapper around RXP, a very fast validating parser.</Description>
-        <Archive sha1sum="5ffd437477f7f041bfe8368c982461c79c283833" type="targz">http://members.comu.edu.tr/nyucel/pisi/pyRXP-1.13-daily-unix-2010.08.21.tar.gz</Archive>
+        <Archive sha1sum="0cbeec877a065f6d0f091a7cb7674ef8db424e31" type="targz">http://www.reportlab.com/ftp/pyRXP-1.16-daily-unix.tar.gz</Archive>
     </Source>
 
     <Package>
@@ -24,6 +24,13 @@
     </Package>
 
     <History>
+        <Update release="3">
+            <Date>2012-11-16</Date>
+            <Version>1.16</Version>
+            <Comment>Version bump</Comment>
+            <Name>Erdinç Gültekin</Name>
+            <Email>erdincgultekin@gmail.com</Email>
+        </Update>
         <Update release="3">
             <Date>2010-08-21</Date>
             <Version>1.13</Version>
