--- a/programming/language/python/python-pylons/pspec.xml
+++ b/programming/language/python/python-pylons/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>app:console</IsA>
         <Summary>Pylons Web Framework</Summary>
         <Description>python-pylons web framework is aimed at making webapps and large programmatic website development in Python easy.</Description>
-        <Archive sha1sum="67731db87ef84196f2ddfc41ac0dba5c5feeaa3e" type="targz">http://pylonshq.com/download/1.0/Pylons-1.0.tar.gz</Archive>
+        <Archive sha1sum="5980e1e29dcc8f20bd52b1729af9f95cbc0159bb" type="targz">https://github.com/downloads/pardus-anka/2013/Pylons-pylons-v1.0.1-1-gc4d26be.tar.gz</Archive>
     </Source>
 
     <Package>
@@ -41,6 +41,13 @@
     </Package>
 
     <History>
+        <Update release="3">
+            <Date>2012-11-16</Date>
+            <Version>1.0.1_rc1</Version>
+            <Comment>Version bump.frome git snapshot</Comment>
+            <Name>Erdinç Gültekin</Name>
+            <Email>erdincgultekin@gmail.com</Email>
+        </Update>
         <Update release="2">
             <Date>2010-11-30</Date>
             <Version>1.0</Version>
