--- a/programming/language/python/python-pyro/pspec.xml
+++ b/programming/language/python/python-pyro/pspec.xml
@@ -13,12 +13,12 @@
         <IsA>app:gui</IsA>
         <Summary>remote objects for Python</Summary>
         <Description>pyro is short for PYthon Remote Objects. It is an advanced and powerful Distributed Object Technology system written entirely in Python, that is designed to be very easy to use.</Description>
-        <Archive sha1sum="99e94dad80fe0a5fef080688824d449c896b3da9" type="targz">http://www.xs4all.nl/~irmen/pyro3/download/Pyro-3.12.tar.gz</Archive>
+        <Archive sha1sum="650dbb7445a319ccf718efcc1dd3042f482353a2" type="targz">http://pypi.python.org/packages/source/P/Pyro/Pyro-3.16.tar.gz</Archive>
         <BuildDependencies>
              <Dependency>python-setuptools</Dependency>
         </BuildDependencies>
         <Patches>
-            <Patch level="0">pyro-setup.py.patch</Patch>
+	  <!--<Patch level="0">pyro-setup.py.patch</Patch>-->
             <Patch level="1">pyro-set-pidfile.patch</Patch>
         </Patches>
     </Source>
@@ -39,6 +39,13 @@
     </Package>
 
     <History>
+        <Update release="7">
+            <Date>2012-11-16</Date>
+            <Version>3.16</Version>
+            <Comment>New stable release</Comment>
+            <Name>Erdinç Gültekin</Name>
+            <Email>erdincgultekin@gmail.com</Email>
+        </Update>
         <Update release="7">
             <Date>2011-02-14</Date>
             <Version>3.12</Version>
