--- a/programming/language/python/python-pytz/pspec.xml
+++ b/programming/language/python/python-pytz/pspec.xml
@@ -13,7 +13,7 @@
         <IsA>library</IsA>
         <Summary>World Timezone Definitions for Python</Summary>
         <Description>python-pytz brings the Olson tz database into Python. This library allows accurate and cross platform timezone calculations using Python. It also solves the issue of ambiguous times at the end of daylight savings, which you can read more about in the Python Library Reference (datetime.tzinfo).Almost all (over 540) of the Olson timezones are supported.</Description>
-        <Archive sha1sum="713f1db23336488a6d2acbfea5905de190b94ddf" type="targz">http://pypi.python.org/packages/source/p/pytz/pytz-2011k.tar.gz</Archive>
+        <Archive sha1sum="83d86ee79e37121e4148bfcd8e9d7381ebcac024" type="targz">http://pypi.python.org/packages/source/p/pytz/pytz-2012h.tar.gz</Archive>
     </Source>
 
     <Package>
@@ -25,6 +25,13 @@
     </Package>
 
     <History>
+        <Update release="9">
+            <Date>2012-11-16</Date>
+            <Version>2012h</Version>
+            <Comment>Version bump.</Comment>
+            <Name>Erdinç Gültekin</Name>
+            <Email>erdincgultekin@gmail.com</Email>
+        </Update>
         <Update release="8">
             <Date>2011-10-06</Date>
             <Version>2011k</Version>
