--- a/programming/language/python/python-PyX/pspec.xml
+++ b/programming/language/python/python-PyX/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>Python graphics package</Summary>
         <Description>A Python package for the creation of PostScript and PDF files.</Description>
-        <Archive sha1sum="c1849e140d326d528fa5f21068693889392f4ecb" type="targz">mirrors://sourceforge/pyx/PyX-0.11.1.tar.gz</Archive>
+        <Archive sha1sum="9e5e9c3235055a50565d94cfc02e758b61b01222" type="targz">mirrors://sourceforge/pyx/PyX-0.12.1.tar.gz</Archive>
         <BuildDependencies>
             <Dependency>texlive-bin-devel</Dependency>
         </BuildDependencies>
@@ -32,6 +32,13 @@
     </Package>
 
     <History>
+        <Update release="8">
+            <Date>2012-11-16</Date>
+            <Version>0.12.1</Version>
+            <Comment>Bump to version 0.12.1</Comment>
+            <Name>Erdinç Gültekin</Name>
+            <Email>erdincgultekin@gmail.com</Email>
+        </Update>
         <Update release="7">
             <Date>2011-09-12</Date>
             <Version>0.11.1</Version>
