--- a/programming/language/python/python-rpy/pspec.xml
+++ b/programming/language/python/python-rpy/pspec.xml
@@ -13,7 +13,7 @@
         <IsA>library</IsA>
         <Summary>A very simple, yet robust, Python interface to the R Programming Language</Summary>
         <Description>RPy is a very simple, yet robust, Python interface to the R Programming Language.</Description>
-        <Archive sha1sum="d068d985c573e93f9af5d0953be53c470f313cbc" type="targz">http://pypi.python.org/packages/source/r/rpy2/rpy2-2.1.9.tar.gz</Archive>
+        <Archive sha1sum="496fa0ae14eb527000500a7e2ad320c20d9014d9" type="targz">http://pypi.python.org/packages/source/r/rpy2/rpy2-2.2.7.tar.gz</Archive>
         <BuildDependencies>
             <Dependency>python-numpy</Dependency>
             <Dependency>R-devel</Dependency>
@@ -33,6 +33,13 @@
     </Package>
 
     <History>
+        <Update release="10">
+            <Date>2012-11-16</Date>
+            <Version>2.2.7</Version>
+            <Comment>Version bump</Comment>
+            <Name>Erdinç Gültekin</Name>
+            <Email>erdincgultekin@gmail.com</Email>
+        </Update>
         <Update release="9">
             <Date>2011-03-18</Date>
             <Version>2.1.9</Version>
